const nock = require('nock');
const request = require('supertest');

const { probot, slackbot, models } = require('.');
const fixtures = require('../fixtures');

const { SlackWorkspace, Installation, Subscription } = models;

describe('Integration: subscription list', () => {
  beforeEach(async () => {
    const workspace = await SlackWorkspace.create({
      slackId: 'T0001',
      accessToken: 'xoxp-token',
      botAccessToken: 'xoxb-token',
    });

    const installation = await Installation.create({
      githubId: 1,
      ownerId: 1,
    });

    await Subscription.create({
      channelId: 'C2147483705',
      githubId: 1,
      installationId: installation.id,
      slackWorkspaceId: workspace.id,
      type: 'repo',
      settings: { commits: 'all' },
    });

    await Subscription.create({
      channelId: 'C2147483705',
      githubId: 2,
      installationId: installation.id,
      slackWorkspaceId: workspace.id,
      type: 'repo',
    });

    await Subscription.create({
      channelId: 'C2147483705',
      githubId: 3,
      installationId: installation.id,
      slackWorkspaceId: workspace.id,
      type: 'account',
    });
  });

  test('works for /github subscribe list', async () => {
    nock('https://api.github.com').get('/repositories/1').reply(200, {
      full_name: 'atom/atom',
      html_url: 'https://github.com/atom/atom',
    });
    nock('https://api.github.com').get('/repositories/2').reply(200, {
      full_name: 'kubernetes/kubernetes',
      html_url: 'https://github.com/kubernetes/kubernetes',
    });
    nock('https://api.github.com').get('/user/3').reply(200, {
      login: 'Microsoft',
      html_url: 'https://github.com/Microsoft',
    });
    const command = fixtures.slack.command({
      text: 'subscribe list',
    });

    await request(probot.server).post('/slack/command').send(command)
      .expect(200)
      .expect((res) => {
        expect(res.body).toMatchSnapshot();
      });
  });

  test('when a repository and an account has been deleted', async () => {
    probot.logger.level('fatal');

    nock('https://api.github.com').get('/repositories/1').reply(200, {
      full_name: 'atom/atom',
      html_url: 'https://github.com/atom/atom',
    });
    nock('https://api.github.com').get('/repositories/2').reply(404, {});
    nock('https://api.github.com').get('/user/3').reply(404, {
      login: 'Microsoft',
      html_url: 'https://github.com/Microsoft',
    });

    const command = fixtures.slack.command({
      text: 'subscribe list',
    });

    await request(probot.server).post('/slack/command').use(slackbot).send(command)
      .expect(200)
      .expect((res) => {
        expect(res.body).toMatchSnapshot();
      });
  });

  test('when some other error occurs', async () => {
    probot.logger.level('fatal');

    nock('https://api.github.com').get('/repositories/1').reply(200, {
      full_name: 'atom/atom',
      html_url: 'https://github.com/atom/atom',
    });
    nock('https://api.github.com').get('/repositories/2').reply(500, {});

    const command = fixtures.slack.command({
      text: 'subscribe list',
    });

    await request(probot.server).post('/slack/command').use(slackbot).send(command)
      .expect(200)
      .expect(/ephemeral/)
      .expect(/we had trouble with your request/);
  });

  test('works for /github subscribe', async () => {
    nock('https://api.github.com').get('/repositories/1').reply(200, {
      full_name: 'atom/atom',
      html_url: 'https://github.com/atom/atom',
    });
    nock('https://api.github.com').get('/repositories/2').reply(200, {
      full_name: 'kubernetes/kubernetes',
      html_url: 'https://github.com/kubernetes/kubernetes',
    });
    nock('https://api.github.com').get('/user/3').reply(200, {
      login: 'Microsoft',
      html_url: 'https://github.com/Microsoft',
    });
    const command = fixtures.slack.command({
      text: 'subscribe',
    });

    await request(probot.server).post('/slack/command').use(slackbot).send(command)
      .expect(200)
      .expect((res) => {
        expect(res.body).toMatchSnapshot();
      });
  });

  test('works for /github subscribe list features', async () => {
    nock('https://api.github.com').get('/repositories/1').reply(200, {
      id: 1,
      full_name: 'atom/atom',
      html_url: 'https://github.com/atom/atom',
    });
    nock('https://api.github.com').get('/repositories/2').reply(200, {
      id: 2,
      full_name: 'kubernetes/kubernetes',
      html_url: 'https://github.com/kubernetes/kubernetes',
    });
    nock('https://api.github.com').get('/user/3').reply(200, {
      id: 3,
      login: 'Microsoft',
      html_url: 'https://github.com/Microsoft',
    });

    const command = fixtures.slack.command({
      text: 'subscribe list features',
    });

    await request(probot.server).post('/slack/command').use(slackbot).send(command)
      .expect(200)
      .expect((res) => {
        expect(res.body).toMatchSnapshot();
      });
  });
});
