// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: subscription list when a repository and an account has been deleted 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 repository",
      "text": "<https://github.com/atom/atom|atom/atom>",
      "title": "Subscribed to the following repositories",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscription list works for /github subscribe 1`] = `
Object {
  "attachments": Array [
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for a repository:
\`/github subscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for a repository:
\`/github unsubscribe owner/repository\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to notifications for all repositories in an organization:
\`/github subscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from notifications for an organization:
\`/github unsubscribe owner\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Subscribe to additional features and adjust the configuration of your subscription (<https://github.com/integrations/slack#configuration|Learn more>):
\`/github subscribe owner/respository reviews,comments\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Unsubscribe from one or more subscription features:
\`/github unsubscribe owner/respository commits\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions in a channel:
\`/github subscribe list\`",
    },
    Object {
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "List all active subscriptions with subscription features:
\`/github subscribe list features\`",
    },
    Object {
      "color": "",
      "footer": "<https://github.com/integrations/slack#readme|Learn More> — <https://github.com/contact?form%5Bsubject%5D=GitHub%2BSlack%20integration|Contact Support>",
      "footer_icon": "https://assets-cdn.github.com/favicon.ico",
      "text": "",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/kubernetes/kubernetes|kubernetes/kubernetes>",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 account",
      "text": "<https://github.com/Microsoft|Microsoft>",
      "title": "Subscribed to the following accounts",
    },
  ],
  "response_type": "ephemeral",
  "text": ":wave: Need some help with \`/github\`?",
}
`;

exports[`Integration: subscription list works for /github subscribe list 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
<https://github.com/kubernetes/kubernetes|kubernetes/kubernetes>",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 account",
      "text": "<https://github.com/Microsoft|Microsoft>",
      "title": "Subscribed to the following accounts",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscription list works for /github subscribe list features 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 2 repositories",
      "text": "<https://github.com/atom/atom|atom/atom>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits:all\`, \`releases\`


<https://github.com/kubernetes/kubernetes|kubernetes/kubernetes>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`, \`releases\`

",
      "title": "Subscribed to the following repositories",
    },
    Object {
      "color": "#24292f",
      "fallback": "Subscribed to 1 account",
      "text": "<https://github.com/Microsoft|Microsoft>
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`, \`releases\`

",
      "title": "Subscribed to the following accounts",
    },
    Object {
      "color": "#24292f",
      "footer": "<https://github.com/integrations/slack#configuration|Learn More>",
    },
  ],
  "response_type": "in_channel",
}
`;
